--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       
       <div id="result">
         <p><p style="color: yellow; display: inline;">Have a Nice Day</p> |<bdo style="color: darkblue;">-basem-</bdo>|</p>
+        <a href="https://www.profitablegatecpm.com/k9jasrnh4e?key=91e702779b00376413fec8f22c1ea66c" >click here</a>
+
       </div>
     </div>
       <script>
