--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div id="inpu">
       <div id="emoji-box">
-        <input type="text" id="emoji-input" placeholder="Enter emoji name...">
+        <input type="text" id="emoji-input" placeholder="Enter emoji name..." id = "inputField">
         <button id="emoji-button">Convert</button>
       </div>
       
